--- a/EcoLanda/Objects/EcoLanda.build_log.htm
+++ b/EcoLanda/Objects/EcoLanda.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.24.2.0
 Copyright (C) 2017 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Aitor Alzola, Mondragon Unibertsitatea, LIC=----
+License Information: Oier Baños, Mondragon Unibertsitatea, LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.24.1
@@ -21,15 +21,20 @@ Target DLL:      Segger\JL2CM3.dll V2.99.26.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-C:\Users\aitor\OneDrive\Escritorio\Mondragon\Maila2\Sehileko_2\POPBL4\EcoLanda\EcoLanda\EcoLanda.uvprojx
-Project File Date:  06/04/2021
+C:\Users\oierb\Documents\GitHub\EcoLanda\EcoLanda\EcoLanda.uvprojx
+Project File Date:  06/10/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'Target 1'
+Rebuild target 'Target 1'
+assembling startup_stm32f407xx.s...
+compiling system_stm32f4xx.c...
+compiling hx711.c...
+compiling ourGpioC.c...
+compiling ourComC.c...
 compiling main.c...
 linking...
-Program Size: Code=8288 RO-data=600 RW-data=36 ZI-data=1636  
+Program Size: Code=8356 RO-data=600 RW-data=28 ZI-data=1644  
 ".\Objects\EcoLanda.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -55,9 +60,9 @@ Package Vendor: Keil
 
    * Component: Keil::Device:Startup:2.6.3
       Source file:   MDK\Device\Source\ARM\STM32F40xxx_41xxx_OPT.s
+      Source file:   Drivers\CMSIS\Device\ST\STM32F4xx\Source\Templates\arm\startup_stm32f407xx.s
       Source file:   MDK\Device\Source\ARM\STM32F4xx_OTP.s
       Include file:  Drivers\CMSIS\Device\ST\STM32F4xx\Include\stm32f4xx.h
-      Source file:   Drivers\CMSIS\Device\ST\STM32F4xx\Source\Templates\arm\startup_stm32f407xx.s
       Source file:   Drivers\CMSIS\Device\ST\STM32F4xx\Source\Templates\system_stm32f4xx.c
 
    * Component: ARM::CMSIS:CORE:5.4.0
